fixed service cards spacing

--- a/src/components/UserCard/Style/ExpertCard.css
+++ b/src/components/UserCard/Style/ExpertCard.css
@@ -103,7 +103,7 @@
 .service-wrapper{
   display: flex;
   align-items: center;
-  padding: 16px 16px;
+  padding: 16px 10px;
   border-radius: 16px;
   margin-right: 32px;
 }
